--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,8 +1,25 @@
+#progressBar
+{
+    height:10px;
+    background: #ffff;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to left, #e74c3c, #000000);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to left, #e74c3c, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    width:100%;
+    position:fixed;
+    top: 0;
+    left: 0;
+}
 
+#progressHighlight
+{
+    height:100%;width:100%;
+    background-color: #fff;    
+    transition: width 0.15s linear;
+}
 .navbar
 {
     background: rgba(0,0,0,0.8);
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(4px);
 }
 .navbar .navbar-brand
 {
